fix no horizontal scroll & add widget title fade in out

--- a/weather-animation/src/App.module.css
+++ b/weather-animation/src/App.module.css
@@ -11,16 +11,6 @@
   color: white;
 }
 
-.title1 {
-  font-size: 0.8rem;
-}
-
-.title2 {
-  font-size: 0.8rem;
-  text-transform: uppercase;
-  color: var(--color-transparent);
-}
-
 hr {
   border: none;
   border-top: 1px solid var(--color-transparent);
